deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-ox
  labels:
    app: open-ox
spec:
  type: ClusterIP
  selector:
    app: open-ox
  ports:
    - name: http
      port: 80
      targetPort: http
